fixed spacing in header

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ h3 {
   display: flex;
   height: 400px;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  justify-content: center;
 }
 
 #grad {
@@ -37,6 +38,8 @@ h3 {
 
 .img-container {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -105,7 +108,7 @@ input[type="text"] {
   transition: max-height 0.5s ease-out;
 }
 
-textarea[type="text"] {
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -126,19 +129,6 @@ input[type="submit"] {
   font-family: "Playfair Display", serif;
 }
 
-/* #container {
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  padding: 20px;
-  margin: 0 auto;
-  padding: 20px;
-  flex-direction: column;
-} */
-
 #container {
   width: 80%;
   max-width: 600px;
@@ -151,26 +141,9 @@ input[type="submit"] {
   border-radius: 5px;
 }
 
-/* form {
-  width: 80%;
-  max-width: 600px;
-} */
-
 form {
   width: 100%;
 }
-
-/* form input,
-form textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-} */
 
 form input,
 form textarea {
@@ -183,20 +156,6 @@ form textarea {
   margin-bottom: 16px;
   resize: vertical;
 }
-
-/* form button {
-  padding: 15px;
-  background: #3b7d54;
-  color: black;
-  font-size: 18px;
-  border: 0;
-  outline: none;
-  cursor: pointer;
-  margin: 20px auto 0;
-  border-radius: 5px;
-  width: 100%;
-  padding: 10px;
-} */
 
 .submit {
   padding: 15px;
@@ -257,7 +216,7 @@ form textarea {
 .logo-container {
   display: flex;
   align-items: center;
-  justify-content: center; /* Add this line */
+  /* justify-content: center; */
 }
 
 /* Default styles for all screen sizes */
@@ -274,13 +233,7 @@ form textarea {
 
   .headshot,
   .stars {
-    display: block; /* Adjust as needed */
-    width: 100%; /* Adjust as needed */
-    max-width: none; /* Remove max-width restriction */
-    height: auto; /* Maintain aspect ratio */
-    border-radius: 0; /* Remove border-radius */
-    margin: 10px 0; /* Add margin as needed */
-    position: static; /* Remove absolute positioning */
+    display: none;
   }
 
   #container {
@@ -288,10 +241,19 @@ form textarea {
   }
 }
 
-@media only screen and (max-width: 768px) {
-}
-
-@media only screen and (max-width: 1024px) {
+@media only screen and (min-width: 601px) {
+  /* Larger screens */
+  #container {
+    width: 80%; /* Adjust this value as needed for larger screens */
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+  }
 }
 
 /* Fade-in once page loads/refreshes */
